--- a/lang/locales/en.json
+++ b/lang/locales/en.json
@@ -1,7 +1,7 @@
 {
   "navigation": {
     "home": "Home",
-    "profile": "Profile"
+    "profile": "Profile Settings"
   },
   "login": {
     "email": "Email",
