feat: mobile modal for reply
- modal is now fullscreen for mobile
- fixed text not fitting in submit box

--- a/lang/locales/en.json
+++ b/lang/locales/en.json
@@ -60,7 +60,9 @@
     "messages": {
       "default": "Failed to post",
       "too_short": "The post is too short",
-      "too_long": "The post is too long"
+      "too_long": "The post is too long",
+      "reply_posted": "Reply posted!",
+      "default_posted": "Posted!"
     }
   },
   "profile": {
