--- a/lang/locales/en.json
+++ b/lang/locales/en.json
@@ -1,6 +1,7 @@
 {
   "common": {
-    "you": "You"
+    "you": "You",
+    "save": "Save"
   },
   "navigation": {
     "home": "Home",
@@ -106,6 +107,20 @@
     "messages": {
       "default": "Something went wrong, please try again later",
       "no_user_encryption": "The user is not using chat yet"
+    },
+    "settings": {
+      "colors": {
+        "your_bubble_color": "Your Bubble Color",
+        "your_text_color": "Your Text Color", 
+        "their_bubble_color": "Their Bubble Color",
+        "their_text_color": "Their Bubble Color",
+        "background_color": "Background Color",
+        "element_color": "Button Color",
+        "text_readability": "Warning! Text readability will be too low.",
+        "element_readability": "Warning! Element visibility will be too low.",
+        "element_text_readability": "'Warning! Element text readability will be too low.'",
+        "updated": "Chat colors updated!"
+      }
     }
   }
 }
