fix: estonian translation mistake

--- a/lang/locales/et.json
+++ b/lang/locales/et.json
@@ -112,7 +112,7 @@
       "colors": {
         "your_bubble_color": "Sinu mulli värv",
         "your_text_color": "Sinu teksti värv", 
-        "their_bubble_color": "Nende teksti värv",
+        "their_bubble_color": "Nende mulli värv",
         "their_text_color": "Nende teksti värv",
         "background_color": "Taustavärv",
         "element_color": "Nuppude värv",
